--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Ubuntu-regular;
-    src: url(Fonts/Ubuntu/Ubuntu-Regular.ttf);
+    src: url(Ubuntu-Regular.ttf);
 }
 
 html,
